luh other stuff i forgor

--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
             <p>A ysws where bla bla bla wa wa wa mi. A ysws where bla bla bla wa wa wa mi. A ysws where bla bla bla wa
                 wa wa mi</p>
         </div>
-        <div class="item">
+        <div class="item" id="itemlast">
             <img src="assets/QUESTIONS.png">
-            <p>If you have any questions, please ask in #evoque-ysws or DM @Raghav / @lou </p>
+            <p>Have questions? Ask in #evoque-ysws or DM <a
+                    href="https://hackclub.slack.com/team/U07JJL30HPA">@Raghav</a> or <a
+                    href="https://hackclub.slack.com/team/U06EMBJH71S">@lou</a>
+                <3 </p>
         </div>
     </div>
 </body>
