--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     </p>
     <div class="griddesc">
         <div class="item">
-            <img src="assets/htp.png">
-            <p>A ysws where bla bla bla wa wa wa mi. A ysws where bla bla bla wa wa wa mi. A ysws where bla bla bla wa
-                wa wa mi</p>
-        </div>
-
-        <div class="item">
-            <img src="assets/We SHIP....png">
+            <img id="item1" src="assets/htp.png">
             <p>A ysws where bla bla bla wa wa wa mi. A ysws where bla bla bla wa wa wa mi. A ysws where bla bla bla wa
                 wa wa mi</p>
         </div>
 
         <div class="item">
             <img src="assets/You SHIP....png">
+            <p>A ysws where bla bla bla wa wa wa mi. A ysws where bla bla bla wa wa wa mi. A ysws where bla bla bla wa
+                wa wa mi</p>
+        </div>
+
+        <div class="item">
+            <img src="assets/We SHIP....png">
             <p>A ysws where bla bla bla wa wa wa mi. A ysws where bla bla bla wa wa wa mi. A ysws where bla bla bla wa
                 wa wa mi</p>
         </div>
